use hacker-blog (https://github.com/tocttou/hacker-blog)

--- a/_posts/2022-04-28-test2.md
+++ b/_posts/2022-04-28-test2.md
@@ -1,9 +1,22 @@
 ---
 title: Test
-layout: post
 categories: test
 tags: test md
 published: true
 ---
-# Another test
-`今天吃了炒杏鲍菇`
+# Test code
+```python
+#!/usr/bin/python3
+from pathlib import Path
+
+p = Path().cwd()
+f = p / 'index.md'
+print(f.absolute())
+```
+
+```bash
+for i in `ls /boot`
+do
+    echo Folder ${i}
+done
+```
